# adv-gis

./: adv-gis.code-workspace  assignment.html  assignment.md  assignment_redo.html  test.sql
.crossnote/: style.less
advgis-finalproject/: .gitignore
advgis-finalproject/notebooks/: new.ipynb
lab3/: code.js
lab4/: .gitignore  pyproject.toml
lab4-automation/notebooks/: main.ipynb
lab4/notebooks/: iter.ipynb
lab9-spatial/: pyproject.toml
lab9-spatial/notebooks/: duckdb.ipynb  main.ipynb
