[project]
name = "lab9-spatial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "lonboard>=0.13.0",
    "pyarrow>=22.0.0",
]
